...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:animateLayoutChanges="false">

        <LinearLayout
            android:id="@+id/reader_quick_actions_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
...
                    android:text="@string/menu_comments"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/primary_text_toolbar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/quick_action_highlight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/menu_highlight"
...
                    android:text="@string/menu_highlight"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/primary_text_toolbar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/quick_action_draw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/menu_draw"
...
                    android:text="@string/menu_draw"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/primary_text_toolbar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/quick_action_add_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/menu_add_text_annot"
...
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/primary_text_toolbar" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reader_selection_actions_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
...
                    android:text="@string/menu_summarize"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/primary_text_toolbar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/selection_action_done"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/menu_accept"
...
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/primary_text_toolbar" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reader_annot_actions_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
...
                    android:text="@string/menu_eraser_size"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/primary_text_toolbar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/annot_action_done"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/menu_accept"
...
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/primary_text_toolbar" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reader_add_text_actions_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/add_text_action_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/menu_cancel"
...
